2316 - fix tests